Fix : 매니저 정보 조회 페이지 디자인 수정

--- a/src/main/resources/static/admin/members/css/members.css
+++ b/src/main/resources/static/admin/members/css/members.css
@@ -31,9 +31,11 @@ table.dataTable tbody tr {
    margin-top: 8px;
 }
 
-#members td, #members th {
-   text-align: center;
-   vertical-align: middle; 
+#member th {
+    text-align: center;
 }
 
-
+/* 테이블 데이터 셀 중앙 정렬 */
+#member td {
+    text-align: center;
+}
