--- a/src/main/resources/static/admin/managers/css/managerDetails.css
+++ b/src/main/resources/static/admin/managers/css/managerDetails.css
@@ -1,22 +1,27 @@
 /* 공통 스타일 */
+span.search-list-subject {
+	width: 200px;
+}
+
+span.search-list-subject.value {
+	width: 400px;
+}
+
+span.search-list-subject-symbol {
+	margin-right: 8px;
+	margin-left: 8px;
+}
 input, select {
 	width:270px;
     margin-left: 50px;
 }
 
-label {
-    margin-left: 80px;
-}
-
-.input-file-label{
-	margin-left: 50px;
-}
-
 .info {
     display: flex;
     border-bottom: 2px solid #D8D8D8;
-    margin-bottom: 15px;
-    padding-bottom: 10px;
+    margin-bottom: 20px;
+    padding-bottom: 20px;
+    padding-left: 50px;
     align-items: center; /* 자식 요소들을 수직 중앙 정렬 */
     position: relative;
 }
@@ -24,75 +29,13 @@ label {
 .search-list-title:first-child {
     margin-bottom: 30px;
 }
-
-.select-box {
-    display: flex;
-    align-items: center; /* 자식 요소들을 수직 중앙 정렬 */
-    position: relative;  /* 필요 시 position relative 사용 */
+.btn{
+	display: flex;
+	justify-content: center; /* 가로 중앙 정렬 */
+	
 }
 
-.select-arrow-down {
-    margin-right: 5px; /* 선택 상자와 화살표 사이에 간격 추가 */
-}
-
-/* 특정 요소 스타일 */
-select#emailUser, select#deptName, select#emailDomain {
-    width: 150px;
-    margin-left: 20px;
-}
-
-select#countryNum {
-    width: 80px;
-}
-
-.input-file-label {
-    margin-right: 30px;
-}
-
-.btn {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.search-list-subject-symbol, input#userPart1.num.gray-text, input#userPart2.num.gray-text {
-    margin-left: 20px;
-}
-
-span.search-list-subject {
-    margin-left: 30px;
-}
-
-div#email.select-arrow-down, div#dept.select-arrow-down {
-    margin-left: 30px;
-}
-
-select#deptName{
-	margin-left:50px;
-}
-
-.important::after {
-   content: "*";
-    color: red; 
-    font-weight: bold;
-    margin-left: 2px;
-    position: absolute; /* 별표의 절대 위치 지정 */
-    transform: translateY(-45%); /* 별표를 더 위쪽으로 이동 */
-}
-
-#userPart1, #userPart2 {
-	width: 80px;
-}
-
-
-.dept-select {
-	width: 110px;
-}
-
-.overlap{
+.caution {
 	margin-left: 10px;
 }
 
-.value {
-	width: 30px;
-}
