Feat : myinfo 사진등록 기능 추가, modal 변경

--- a/src/main/resources/static/admin/myinfo/css/myinfo.css
+++ b/src/main/resources/static/admin/myinfo/css/myinfo.css
@@ -104,3 +104,8 @@ select#deptName{
     height: 100%;
     object-fit: cover;
 }
+.btn-box {
+	display: flex;
+	justify-content: center;
+	align-items: center; gap: 20px;
+}
