Fix: js clock 에러 수정

--- a/src/main/resources/templates/admin/customer_orders/customerDetail.html
+++ b/src/main/resources/templates/admin/customer_orders/customerDetail.html
@@ -120,7 +120,7 @@
 						</span>
 					</div>
 					<div class="no-data">
-						<span th:text="${status.size - status.index}"></span>
+						<span th:text="${status.count}"></span>
 					</div>
 					<div class="book-title-data">
 						<span th:text="${info.book_name}"></span>
