--- a/src/main/resources/templates/admin/supplier_orders/supplierDetail.html
+++ b/src/main/resources/templates/admin/supplier_orders/supplierDetail.html
@@ -45,7 +45,7 @@
 			<div>
 				<div class="table-data-area" th:each="info, status : ${detailList}">
 					<div class="no-data">
-						<span th:text="${status.size - status.index}"></span>
+						<span th:text="${status.count}"></span>
 					</div>
 					<div class="book-title-data">
 						<span th:text="${info.order_detail_title}"></span>
