--- a/src/main/resources/templates/admin/banners/bannerDetail.html
+++ b/src/main/resources/templates/admin/banners/bannerDetail.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>배너 수정</title>
     <link rel="stylesheet" href="/admin/banners/css/banners.css">
+    <link rel="stylesheet" href="/admin/common/css/modal.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
 </head>
 <body>
@@ -12,18 +13,18 @@
         <div class="header">
             <h1 class="search-list-title">배너/팝업 수정</h1>
         </div>
-        <form action="/admin/banners/update" id="bannerForm" method="post" enctype="multipart/form-data" class="content">
+        <form action="/admin/banners/update" id="bannerForm" method="POST" enctype="multipart/form-data" class="content">
             <input type="hidden" name="banner_num" th:value="${banners.banner_num}">
 
-            <div class="filter-group">
-                <div class="search-list-subject insert-subject">
+            <div class="banner-info">
+                <div class="insert-subject">
                     제목 <label class="required">*</label>
                 </div>
                 <input type="text" name="banner_title" class="insert-input" th:value="${banners.banner_title}" required>
             </div>
 
             <div class="radio-group">
-                <div class="search-list-subject insert-subject">
+                <div class="insert-subject">
                     유형 <label class="required">*</label>
                 </div>
                 <div class="radio-wrap">
@@ -33,7 +34,7 @@
             </div>
 
             <div class="radio-group">
-                <div class="search-list-subject insert-subject">
+                <div class="insert-subject">
                     노출 여부 <label class="required">*</label>
                 </div>
                 <div class="radio-wrap">
@@ -42,8 +43,8 @@
                 </div>
             </div>
 
-            <div class="filter-group">
-                <div class="search-list-subject insert-subject">
+            <div class="banner-info">
+                <div class="insert-subject">
                     노출 기간 <label class="required">*</label>
                 </div>
                 <div class="date-picker">
@@ -59,40 +60,32 @@
                 </div>
             </div>    
 
-            <div class="filter-group image-wrap">
-                <div class="search-list-subject insert-subject">
-                    이미지<label class="required">*</label>
+            <div class="banner-info image-wrap">
+                <div class="insert-subject">
+                    이미지 <label class="required">*</label>
                 </div>
                 <div class="img-input-wrap">
                     <label for="input-file" class="input-file-label"> 
                         <i class="fa-solid fa-plus"></i> 
                     </label> 
-                    <input type="file" name="banner_image" id="input-file" class="input-img-file" th:value="${banners.banner_changed}" />
+                    <input type="file" name="banner_image" id="input-file" class="input-img-file" th:value="${banners.banner_original}" />
                 </div>
-                <div class="file-name" th:text="${banners.banner_changed}"></div>
+                <input type="hidden" id="original-file-name" name="banner_original" value="${banners.banner_original}" />
+                <input type="hidden" id="changed-file-name" name="banner_changed" value="${banners.banner_changed}" />
+                <div class="file-name" th:text="${banners.banner_original}"></div>
             </div>
             
-            <div class="submit-btns">
+            <div class="button-wrap submit-btns">
                 <button type="submit" id="update-button"class="default-btn">수정</button>
-                <button type="button" class="default-btn cancle" onclick="location.href='/admin/index?path=admin/banners/banners'">취소</button>
+                <button class="default-btn cancel" onclick="location.href='/admin/index?path=admin/banners/banners'">취소</button>
             </div>
         </form>
     </div>
 
-	<div id="myModal" class="modal">
-		<div class="modal-content">
-			<p>수정하시겠습니까?</p>
-			<div class="modal-footer">
-				<button id="confirm-update" class="modal-btn confirm">확인</button>
-				<button id="cancel-update" class="modal-btn cancel">취소</button>
-			</div>
-		</div>
-	</div>
-
-
 	<script src="/admin/common/js/main.js"></script>
     <script src="https://code.jquery.com/jquery-3.7.1.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
-    <script src="/admin/banners/js/banners.js"></script>
+    <script src="/admin/banners/js/bannerInsert.js"></script>
+    <script src="/admin/banners/js/bannerUpdate.js"></script>
 </body>
 </html>
