--- a/src/main/resources/static/admin/products/css/edit-product.css
+++ b/src/main/resources/static/admin/products/css/edit-product.css
@@ -98,7 +98,7 @@ input[type=text]:not(.placeholder, .search-input, .input-price) {
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.4); /* 블랙 w/ opacity */
+    /*background-color: rgba(0, 0, 0, 0.4); !* 블랙 w/ opacity *!*/
 }
 #search-book-modal.on {
     display: block;
@@ -113,6 +113,7 @@ input[type=text]:not(.placeholder, .search-input, .input-price) {
     border: 1px solid #666;
     border-radius: 10px;
     background-color: #fff;
+    box-shadow: 2px 3px 7px 1px rgb(0 0 0 / 42%);
 }
 
 /* 스크롤방지 */
@@ -136,9 +137,13 @@ input[type=text]:not(.placeholder, .search-input, .input-price) {
     transform: rotate(115deg);
 }
 
-#search-book-modal .table-center td, .table-center th {
+#search-book-modal .table-center td:not(.text-ellipsis), .table-center th {
     text-align: center;
     vertical-align: middle;
+}
+
+.select-td, .text-ellipsis {
+    cursor: pointer;
 }
 
 #search-book-modal .table thead {
@@ -154,4 +159,25 @@ input[type=text]:not(.placeholder, .search-input, .input-price) {
     border-width: 1px 0 1px 0;
     border-style: solid;
     border-color: #D8D8D8;
+}
+
+.table td {
+    height: 50px;
+    vertical-align: middle;
+}
+
+.table th:not([align]) {
+    text-align: center;
+}
+
+.pagination-list {
+    justify-content: center;
+}
+
+/* 셀렉트박스 사이즈조정 */
+#select-lists {
+    width: 160px;
+}
+.select-arrow-down {
+    left: 130px;
 }
