--- a/src/main/resources/templates/admin/products/edit-product.html
+++ b/src/main/resources/templates/admin/products/edit-product.html
@@ -23,21 +23,21 @@
             <p class="search-list-subject">책제목
                 <span class="important">*</span>
             </p>
-            <input type="text" name="book_name" class="input-text-box"
+            <input type="text" name="book_name" id="book_name" class="input-text-box"
                    th:value="${product_detail != null ? product_detail.book_name : ''}">
         </div>
         <div class="product-info">
             <p class="search-list-subject">출판사
                 <span class="important">*</span>
             </p>
-            <input type="text" name="book_publisher" class="input-text-box"
+            <input type="text" name="book_publisher" id="book_publisher" class="input-text-box"
                    th:value="${product_detail != null ? product_detail.book_publisher : ''}">
         </div>
         <div class="product-info">
             <p class="search-list-subject">저자
                 <span class="important">*</span>
             </p>
-            <input type="text" name="book_author" class="input-text-box"
+            <input type="text" name="book_author" id="book_author" class="input-text-box"
                    th:value="${product_detail != null ? product_detail.book_author : ''}">
         </div>
         <div class="product-info">
@@ -145,6 +145,9 @@
             <textarea name="book_intro" id="" cols="30" rows="10" class="custom-textarea"
                       th:text="${product_detail != null ? product_detail.book_intro : ''}"></textarea>
         </div>
+        <th:block th:if="${product_detail.book_deleted == '02'}">
+            <input type="hidden" name="book_deleted" th:value="01">
+        </th:block>
     </form>
 
     <div class="button-wrap">
