--- a/src/main/resources/static/admin/common/css/style.css
+++ b/src/main/resources/static/admin/common/css/style.css
@@ -171,6 +171,19 @@
     color: #666;
 }
 
+.profile-img-wrap {
+    width: 50px;
+    height: 50px;
+    border: 1px solid #fefefe;
+    border-radius: 100%;
+    overflow: hidden;
+}
+
+.profile-img-wrap .profile-img {
+    width: 100%;
+    height: 100%;
+}
+
 .text-wrap {
     flex-direction: column;
 }
